# EyeFaceDetection

./: CMakeLists.txt  README.md  cmake.nothing  main.c
include/: gstream.h  opencvLib.h
lib/gst/: gstreamer.c
lib/opencv/: opencv.cpp
